--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,3 +35,12 @@ section#celular {
     background: url(../imagens/frame-iphone.png) no-repeat;
     
 }
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 21.5px;
+    
+    width: 268px;
+    height: 471px;
+}
